test/classes/errors/nilability-return-yield/yield-borrowed.good
yield-borrowed.chpl:3: In iterator 'I':
yield-borrowed.chpl:3: error: cannot initialize yield value of type 'borrowed C' from a 'borrowed C?'
